sandbox/output
GildedRoseTest.java:25: error: cannot find symbol
        assertEquals("Normal item", app.items[0].name);
                                    ^
  symbol:   variable app
  location: class GildedRoseTest
1 error
